# flutter_libsurrealdb

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/bysensa/surrealdb/: SurrealdbPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/bysensa/surrealdb_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: libsurrealdb.podspec  surrealdb.podspec
ios/Classes/: SurrealdbPlugin.h  SurrealdbPlugin.m  SwiftSurrealdbPlugin.swift  libsurrealdb.h
lib/: bindings.dart  libsurrealdb.dart
macos/: libsurrealdb.podspec  surrealdb.podspec
macos/Classes/: SurrealdbPlugin.swift  libsurrealdb.h
src/: lib.rs  session.rs  store.rs
test/: session_test.dart
