[package]
name = "surrealdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "surrealdb"
crate-type = ["staticlib", "dylib"]

[dependencies]
surrealdb = { version = "1.0.0-beta.8", features = ["kv-mem",  "parallel"], default-features = false }
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
serde_json = "1.0.87"