[package]
name = "surrealdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "surrealdb"
crate-type = ["staticlib", "dylib"]

[dependencies]
surrealdb = { git = "https://github.com/bysensa/surrealdb", branch = "kv-yakv", features = ["kv-mem", "kv-yakv", "parallel"], default-features = false }
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
serde_json = "1.0.87"
anyhow = "1"